Add upload artifacts step in publish workflow
Add artifact upload step for wasm-pack build output

--- a/.github/workflows/publish-npm.yaml
+++ b/.github/workflows/publish-npm.yaml
@@ -27,3 +27,11 @@ jobs:
 
       - name: Building the package
         run: wasm-pack build --scope="windpress" --release
+        
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-${{ matrix.target }}
+          path: |
+            *.node
+            ${{ matrix.binary }}
